realizado algumas alterações de nomes de classes e unidades de medidas

--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
                             <img class="news-list-image" src="assets/images/game-populationzero.png" alt="">
                             <div class="grid-content-list">
                                 <span class="game-name">Population Zero</span>
-                                <div class="flex-content-list">
+                                <div class="grid-content-info">
                                     <img class="favorite" src="assets/icons/home/favorite_border.svg" alt="">
                                 </div>
                                 <span class="game-producer">Enplex Games</span>                            
-                                <div class="grid-price">
+                                <div class="flex-price">
                                     <span class="price">$215,00</span>
                                     <span><button class="section-button-add"><img class="image-button-add" src="assets/icons/home/add_shopping_cart.svg" alt=""></button></span>
                                 </div>
@@ -72,11 +72,11 @@
                             <img class="news-list-image" src="assets/images/game-projectwinter.png" alt="">                        
                             <div class="grid-content-list">
                                 <span class="game-name">Project Winter</span>
-                                <div class="flex-content-list">
+                                <div class="grid-content-info">
                                     <img class="favorite" src="assets/icons/home/favorite_border.svg" alt="">
                                 </div>
                                 <span class="game-producer">Other Ocean</span>                            
-                                <div class="grid-price">
+                                <div class="flex-price">
                                     <span class="price">$215,00</span>
                                     <span><button class="section-button-add"><img class="image-button-add" src="assets/icons/home/add_shopping_cart.svg" alt=""></button></span>
                                 </div>
@@ -86,11 +86,11 @@
                             <img class="news-list-image" src="assets/images/game-borderlands.png" alt="">
                             <div class="grid-content-list">
                                 <span class="game-name">Borderlands 3</span>
-                                <div class="flex-content-list">
+                                <div class="grid-content-info">
                                     <img class="favorite" src="assets/icons/home/favorite_border.svg" alt="">
                                 </div>
                                 <span class="game-producer">Gearbox Software</span>                            
-                                <div class="grid-price">
+                                <div class="flex-price">
                                     <span class="price">$215,00</span>
                                     <span><button class="section-button-add"><img class="image-button-add" src="assets/icons/home/add_shopping_cart.svg" alt=""></button></span>
                                 </div>
@@ -126,11 +126,11 @@
                             <img class="news-list-image" src="assets/images/game-populationzero.png" alt="">
                             <div class="grid-content-list">
                                 <span class="game-name">Population Zero</span>
-                                <div class="flex-content-list">
+                                <div class="grid-content-info">
                                     <img class="favorite" src="assets/icons/home/favorite_border.svg" alt="">
                                 </div>
                                 <span class="game-producer">Enplex Games</span>                            
-                                <div class="grid-price">
+                                <div class="flex-price">
                                     <span class="price">$215,00</span>
                                 </div>
                             </div>
@@ -140,11 +140,11 @@
                             <img class="news-list-image" src="assets/images/game-projectwinter.png" alt="">                        
                             <div class="grid-content-list">
                                 <span class="game-name">Project Winter</span>
-                                <div class="flex-content-list">
+                                <div class="grid-content-info">
                                     <img class="favorite" src="assets/icons/home/favorite_border.svg" alt="">
                                 </div>
                                 <span class="game-producer">Other Ocean</span>                            
-                                <div class="grid-price">
+                                <div class="flex-price">
                                     <span class="price">$215,00</span>
                                 </div>
                             </div>
@@ -153,11 +153,11 @@
                             <img class="news-list-image" src="assets/images/game-borderlands.png" alt="">
                             <div class="grid-content-list">
                                 <span class="game-name">Borderlands 3</span>
-                                <div class="flex-content-list">
+                                <div class="grid-content-info">
                                     <img class="favorite" src="assets/icons/home/favorite_border.svg" alt="">
                                 </div>
                                 <span class="game-producer">Gearbox Software</span>                            
-                                <div class="grid-price">
+                                <div class="flex-price">
                                     <span class="price">$215,00</span>
                                 </div>
                             </div>
@@ -180,11 +180,11 @@
                             <img class="news-list-image" src="assets/images/game-populationzero.png" alt="">
                             <div class="grid-content-list">
                                 <span class="game-name">Population Zero</span>
-                                <div class="flex-content-list">
+                                <div class="grid-content-info">
                                     <img class="favorite" src="assets/icons/home/favorite_border.svg" alt="">
                                 </div>
                                 <span class="game-producer">Enplex Games</span>                            
-                                <div class="grid-price">
+                                <div class="flex-price">
                                     <span class="price">$215,00</span>
                                 </div>
                             </div>
@@ -194,11 +194,11 @@
                             <img class="news-list-image" src="assets/images/game-projectwinter.png" alt="">                        
                             <div class="grid-content-list">
                                 <span class="game-name">Project Winter</span>
-                                <div class="flex-content-list">
+                                <div class="grid-content-info">
                                     <img class="favorite" src="assets/icons/home/favorite_border.svg" alt="">
                                 </div>
                                 <span class="game-producer">Other Ocean</span>                            
-                                <div class="grid-price">
+                                <div class="flex-price">
                                     <span class="price">$215,00</span>
                                 </div>
                             </div>
@@ -207,11 +207,11 @@
                             <img class="news-list-image" src="assets/images/game-borderlands.png" alt="">
                             <div class="grid-content-list">
                                 <span class="game-name">Borderlands 3</span>
-                                <div class="flex-content-list">
+                                <div class="grid-content-info">
                                     <img class="favorite" src="assets/icons/home/favorite_border.svg" alt="">
                                 </div>
                                 <span class="game-producer">Gearbox Software</span>                            
-                                <div class="grid-price">
+                                <div class="flex-price">
                                     <span class="price">$215,00</span>
                                 </div>
                             </div>
@@ -247,12 +247,12 @@
                             <div class="grid-discount-list">
                                 <div class="grid-discount-desc">
                                     <span class="game-name">Population Zero</span>
-                                    <div class="flex-content-list">
+                                    <div class="grid-content-info">
                                         <img class="favorite" src="assets/icons/home/favorite_border.svg" alt="">
                                     </div>
                                     <span class="game-producer">Enplex Games</span>
                                 </div>                      
-                                <div class="grid-price">
+                                <div class="flex-price">
                                     <span><del>$235,00</del></span>
                                     <span class="price">$215,00</span>
                                 </div>
@@ -265,12 +265,12 @@
                             <div class="grid-discount-list">
                                 <div class="grid-discount-desc">
                                     <span class="game-name">Project Winter</span>
-                                    <div class="flex-content-list">
+                                    <div class="grid-content-info">
                                         <img class="favorite" src="assets/icons/home/favorite_border.svg" alt="">
                                     </div>
                                     <span class="game-producer">Other Ocean</span>     
                                 </div>                       
-                                <div class="grid-price">
+                                <div class="flex-price">
                                     <span><del>$235,00</del></span>
                                     <span class="price">$215,00</span>
                                 </div>
@@ -282,12 +282,12 @@
                             <div class="grid-discount-list">
                                 <div class="grid-discount-desc">
                                     <span class="game-name">Borderlands 3</span>
-                                    <div class="flex-content-list">
+                                    <div class="grid-content-info">
                                         <img class="favorite" src="assets/icons/home/favorite_border.svg" alt="">
                                     </div>
                                     <span class="game-producer">Gearbox Software</span>   
                                 </div>
-                                <div class="grid-price">
+                                <div class="flex-price">
                                     <span><del>$235,00</del></span>
                                     <span class="price">$215,00</span>
                                 </div>
@@ -323,11 +323,11 @@
                             <img class="news-list-image" src="assets/images/game-populationzero.png" alt="">
                             <div class="grid-content-list">
                                 <span class="game-name">Population Zero</span>
-                                <div class="flex-content-list">
+                                <div class="grid-content-info">
                                     <img class="favorite" src="assets/icons/home/favorite_border.svg" alt="">
                                 </div>
                                 <span class="game-producer">Enplex Games</span>                            
-                                <div class="grid-price">
+                                <div class="flex-price">
                                     <span class="price">$215,00</span>
                                 </div>
                             </div>
@@ -337,11 +337,11 @@
                             <img class="news-list-image" src="assets/images/game-projectwinter.png" alt="">                        
                             <div class="grid-content-list">
                                 <span class="game-name">Project Winter</span>
-                                <div class="flex-content-list">
+                                <div class="grid-content-info">
                                     <img class="favorite" src="assets/icons/home/favorite_border.svg" alt="">
                                 </div>
                                 <span class="game-producer">Other Ocean</span>                            
-                                <div class="grid-price">
+                                <div class="flex-price">
                                     <span class="price">$215,00</span>
                                 </div>
                             </div>
@@ -350,11 +350,11 @@
                             <img class="news-list-image" src="assets/images/game-borderlands.png" alt="">
                             <div class="grid-content-list">
                                 <span class="game-name">Borderlands 3</span>
-                                <div class="flex-content-list">
+                                <div class="grid-content-info">
                                     <img class="favorite" src="assets/icons/home/favorite_border.svg" alt="">
                                 </div>
                                 <span class="game-producer">Gearbox Software</span>                            
-                                <div class="grid-price">
+                                <div class="flex-price">
                                     <span class="price">$215,00</span>
                                 </div>
                             </div>
