--- a/store/store.html
+++ b/store/store.html
@@ -141,11 +141,11 @@
                                     <img class="news-list-image" src="../assets/images/game-populationzero.png" alt="">
                                     <div class="grid-content-list">
                                         <span class="game-name">Population Zero</span>
-                                        <div class="flex-content-list">
+                                        <div class="grid-content-info">
                                             <img class="favorite" src="../assets/icons/home/favorite_border.svg" alt="">
                                         </div>
                                         <span class="game-producer">Enplex Games</span>
-                                        <div class="grid-price">
+                                        <div class="flex-price">
                                             <span class="price">$215,00</span>
                                         </div>
                                     </div>
@@ -154,11 +154,11 @@
                                     <img class="news-list-image" src="../assets/images/game-projectwinter.png" alt="">
                                     <div class="grid-content-list">
                                         <span class="game-name">Project Winter</span>
-                                        <div class="flex-content-list">
+                                        <div class="grid-content-info">
                                             <img class="favorite" src="../assets/icons/home/favorite_border.svg" alt="">
                                         </div>
                                         <span class="game-producer">Other Ocean</span>
-                                        <div class="grid-price">
+                                        <div class="flex-price">
                                             <span class="price">$215,00</span>
                                         </div>
                                     </div>
@@ -167,11 +167,11 @@
                                     <img class="news-list-image" src="../assets/images/game-borderlands.png" alt="">
                                     <div class="grid-content-list">
                                         <span class="game-name">Borderlands 3</span>
-                                        <div class="flex-content-list">
+                                        <div class="grid-content-info">
                                             <img class="favorite" src="../assets/icons/home/favorite_border.svg" alt="">
                                         </div>
                                         <span class="game-producer">Gearbox Software</span>
-                                        <div class="grid-price">
+                                        <div class="flex-price">
                                             <span class="price">$215,00</span>
                                         </div>
                                     </div>
@@ -184,11 +184,11 @@
                                     <img class="news-list-image" src="../assets/images/game-populationzero.png" alt="">
                                     <div class="grid-content-list">
                                         <span class="game-name">Population Zero</span>
-                                        <div class="flex-content-list">
+                                        <div class="grid-content-info">
                                             <img class="favorite" src="../assets/icons/home/favorite_border.svg" alt="">
                                         </div>
                                         <span class="game-producer">Enplex Games</span>
-                                        <div class="grid-price">
+                                        <div class="flex-price">
                                             <span class="price">$215,00</span>
                                         </div>
                                     </div>
@@ -197,11 +197,11 @@
                                     <img class="news-list-image" src="../assets/images/game-projectwinter.png" alt="">
                                     <div class="grid-content-list">
                                         <span class="game-name">Project Winter</span>
-                                        <div class="flex-content-list">
+                                        <div class="grid-content-info">
                                             <img class="favorite" src="../assets/icons/home/favorite_border.svg" alt="">
                                         </div>
                                         <span class="game-producer">Other Ocean</span>
-                                        <div class="grid-price">
+                                        <div class="flex-price">
                                             <span class="price">$215,00</span>
                                         </div>
                                     </div>
@@ -210,11 +210,11 @@
                                     <img class="news-list-image" src="../assets/images/game-borderlands.png" alt="">
                                     <div class="grid-content-list">
                                         <span class="game-name">Borderlands 3</span>
-                                        <div class="flex-content-list">
+                                        <div class="grid-content-info">
                                             <img class="favorite" src="../assets/icons/home/favorite_border.svg" alt="">
                                         </div>
                                         <span class="game-producer">Gearbox Software</span>
-                                        <div class="grid-price">
+                                        <div class="flex-price">
                                             <span class="price">$215,00</span>
                                         </div>
                                     </div>
@@ -227,11 +227,11 @@
                                     <img class="news-list-image" src="../assets/images/game-populationzero.png" alt="">
                                     <div class="grid-content-list">
                                         <span class="game-name">Population Zero</span>
-                                        <div class="flex-content-list">
+                                        <div class="grid-content-info">
                                             <img class="favorite" src="../assets/icons/home/favorite_border.svg" alt="">
                                         </div>
                                         <span class="game-producer">Enplex Games</span>
-                                        <div class="grid-price">
+                                        <div class="flex-price">
                                             <span class="price">$215,00</span>
                                         </div>
                                     </div>
@@ -240,11 +240,11 @@
                                     <img class="news-list-image" src="../assets/images/game-projectwinter.png" alt="">
                                     <div class="grid-content-list">
                                         <span class="game-name">Project Winter</span>
-                                        <div class="flex-content-list">
+                                        <div class="grid-content-info">
                                             <img class="favorite" src="../assets/icons/home/favorite_border.svg" alt="">
                                         </div>
                                         <span class="game-producer">Other Ocean</span>
-                                        <div class="grid-price">
+                                        <div class="flex-price">
                                             <span class="price">$215,00</span>
                                         </div>
                                     </div>
@@ -253,11 +253,11 @@
                                     <img class="news-list-image" src="../assets/images/game-borderlands.png" alt="">
                                     <div class="grid-content-list">
                                         <span class="game-name">Borderlands 3</span>
-                                        <div class="flex-content-list">
+                                        <div class="grid-content-info">
                                             <img class="favorite" src="../assets/icons/home/favorite_border.svg" alt="">
                                         </div>
                                         <span class="game-producer">Gearbox Software</span>
-                                        <div class="grid-price">
+                                        <div class="flex-price">
                                             <span class="price">$215,00</span>
                                         </div>
                                     </div>
@@ -270,11 +270,11 @@
                                     <img class="news-list-image" src="../assets/images/game-populationzero.png" alt="">
                                     <div class="grid-content-list">
                                         <span class="game-name">Population Zero</span>
-                                        <div class="flex-content-list">
+                                        <div class="grid-content-info">
                                             <img class="favorite" src="../assets/icons/home/favorite_border.svg" alt="">
                                         </div>
                                         <span class="game-producer">Enplex Games</span>
-                                        <div class="grid-price">
+                                        <div class="flex-price">
                                             <span class="price">$215,00</span>
                                         </div>
                                     </div>
@@ -283,11 +283,11 @@
                                     <img class="news-list-image" src="../assets/images/game-projectwinter.png" alt="">
                                     <div class="grid-content-list">
                                         <span class="game-name">Project Winter</span>
-                                        <div class="flex-content-list">
+                                        <div class="grid-content-info">
                                             <img class="favorite" src="../assets/icons/home/favorite_border.svg" alt="">
                                         </div>
                                         <span class="game-producer">Other Ocean</span>
-                                        <div class="grid-price">
+                                        <div class="flex-price">
                                             <span class="price">$215,00</span>
                                         </div>
                                     </div>
@@ -296,11 +296,11 @@
                                     <img class="news-list-image" src="../assets/images/game-borderlands.png" alt="">
                                     <div class="grid-content-list">
                                         <span class="game-name">Borderlands 3</span>
-                                        <div class="flex-content-list">
+                                        <div class="grid-content-info">
                                             <img class="favorite" src="../assets/icons/home/favorite_border.svg" alt="">
                                         </div>
                                         <span class="game-producer">Gearbox Software</span>
-                                        <div class="grid-price">
+                                        <div class="flex-price">
                                             <span class="price">$215,00</span>
                                         </div>
                                     </div>
